--- a/package.json
+++ b/package.json
@@ -6,10 +6,22 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "express": "^4.17.3",
+    "express-session": "^1.17.2",
+    "jwt-decode": "^3.1.2",
+    "passport": "^0.5.2",
+    "passport-google-oauth2": "^0.2.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-ga": "^2.5.6",
+    "react-google-login": "^5.2.2",
+    "react-google-one-tap-login": "^0.1.1",
+    "react-redux": "^7.2.8",
+    "react-router-dom": "^5.1.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
